--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -19,8 +19,14 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
+es:
   hello: "Hello world"
   nav1:
-      miCuenta: "Mi cuenta"
+      MyCart: "Mi carrito"
 
+  nav2:
+      miCuenta: "Mi cuenta"
+      about:    "Acerca de"
+      SignIn:   "Iniciar Sesión"
+      SignOUt:  "Salir de la Sesión"
+      SignUp:   "Registrarse"
